Replace logo with multiple sizes

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
   </head>
   
   <body>
-    <img class="logo" src="./images/logo.png" alt="Dr. Plumber, 757-401-4296" />
+    <img class="logo"
+        srcset="./images/logo-1024.png 1024w, ./images/logo-512.png 512w, ./images/logo-256.png 256w"
+        alt="Dr. Plumber, 757-401-4296" />
     
     <div class="text">
       <h1>Text goes here!</h1>
