Add description, services offered, service areas, and contact info text

--- a/index.html
+++ b/index.html
@@ -20,12 +20,32 @@
   </head>
   
   <body>
-    <img class="logo"
+    <img id="logo"
         srcset="./images/logo-1024.png 1024w, ./images/logo-512.png 512w, ./images/logo-256.png 256w"
         alt="Dr. Plumber, 757-401-4296" />
     
-    <div class="text">
-      <h1>Text goes here!</h1>
+    <div id="text">
+      <blockquote>
+        We serve the Hampton Roads and surrounding areas including Chesapeake, Suffolk, Virginia Beach, Norfolk, and
+        Newport News with friendly and professional home repair services. With over 20 years of experience and a passion
+        for fast, clean, and friendly service, there's no plumbing task in your home or business we cant handle!
+      </blockquote>
+
+      <h4>Services offered:</h4>
+      <ul>
+        <li>Tankless water heater installation &amp; service</li>
+        <li>Drain cleaning</li>
+        <li>Leak repair</li>
+        <li>Water heater replacement &amp; service</li>
+        <li>&hellip;and much more!</li>
+      </ul>
+
+      <p>All major credit cards are accepted.</p>
+      
+      <p>
+        Give us a call at <a href="tel:+17574014296">757-401-4296</a> or
+        <a href="mailto:Dr.plumber.james@gmail.com">email us</a> for a free estimate today!
+      </p>
     </div>
 
     <div id="gallery" class="pswp-gallery pswp-gallery--single-column">
