No free estimates!

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       
       <p>
         Give us a call at <a href="tel:+17574014296">757-401-4296</a> or
-        <a href="mailto:Dr.plumber.james@gmail.com">email us</a> for a free estimate today!
+        <a href="mailto:Dr.plumber.james@gmail.com">email us</a> for an estimate today!
       </p>
     </div>
 
