Style to look good on mobile for now

--- a/index.html
+++ b/index.html
@@ -25,27 +25,40 @@
         alt="Dr. Plumber, 757-401-4296" />
     
     <div id="text">
-      <blockquote>
-        We serve the Hampton Roads and surrounding areas including Chesapeake, Suffolk, Virginia Beach, Norfolk, and
-        Newport News with friendly and professional home repair services. With over 20 years of experience and a passion
-        for fast, clean, and friendly service, there's no plumbing task in your home or business we cant handle!
-      </blockquote>
+      <section>
+        <h4>Offering professional home repair services:</h4>
+        <ul>
+          <li>Tankless water heater installation &amp; service</li>
+          <li>Drain cleaning</li>
+          <li>Leak repair</li>
+          <li>Water heater replacement &amp; repair</li>
+          <li>&hellip;and much more!</li>
+        </ul>
+      </section>
 
-      <h4>Services offered:</h4>
-      <ul>
-        <li>Tankless water heater installation &amp; service</li>
-        <li>Drain cleaning</li>
-        <li>Leak repair</li>
-        <li>Water heater replacement &amp; service</li>
-        <li>&hellip;and much more!</li>
-      </ul>
+      <section>
+        <h4>In the Hampton Roads area, including:</h4>
+        <ul>
+          <li>Chesapeake</li>
+          <li>Suffolk</li>
+          <li>Virginia Beach</li>
+          <li>Norfolk</li>
+          <li>Hampton</li>
+          <li>Newport News</li>
+        </ul>
+      </section>
 
-      <p>All major credit cards are accepted.</p>
-      
-      <p>
-        Give us a call at <a href="tel:+17574014296">757-401-4296</a> or
-        <a href="mailto:Dr.plumber.james@gmail.com">email us</a> for an estimate today!
-      </p>
+      <section>
+        <p>
+          With over 20 years of experience and a passion for fast, clean, and friendly service, there's no
+          plumbing task in your home or business we cant handle!
+        </p>
+        <p>
+          Give us a call at <a href="tel:+17574014296">757-401-4296</a> or
+          <a href="mailto:Dr.plumber.james@gmail.com">email us</a> for an estimate today!
+        </p>
+        <p>All major credit cards are accepted.</p>
+      </section>
     </div>
 
     <div id="gallery" class="pswp-gallery pswp-gallery--single-column">
@@ -57,7 +70,8 @@
       </a>
       <a href="./images/1000/DrPlumberVehicle.jpg" 
           data-pswp-width="1000" 
-          data-pswp-height="750" 
+          data-pswp-height="750"
+          data-cropped="true"
           target="_blank">
         <img src="./images/200/DrPlumberVehicle.jpg" alt="" />
       </a>
