Add forgotten data-cropped attributes

--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
       <a href="./images/1000/SewerCamera.jpg" 
           data-pswp-width="1000" 
           data-pswp-height="750" 
+          data-cropped="true"
           target="_blank">
         <img src="./images/200/SewerCamera.jpg" alt="" />
       </a>
@@ -120,6 +121,7 @@
       <a href="./images/1000/TanklessWaterHeater2.jpg" 
           data-pswp-width="1000" 
           data-pswp-height="750" 
+          data-cropped="true"
           target="_blank">
         <img src="./images/200/TanklessWaterHeater2.jpg" alt="" />
       </a>
