Fix order of images in logo srcset

--- a/index.html
+++ b/index.html
@@ -20,9 +20,8 @@
   </head>
   
   <body>
-    <img id="logo"
-        srcset="./images/logo-1024.png 1024w, ./images/logo-512.png 512w, ./images/logo-256.png 256w"
-        alt="Dr. Plumber, 757-401-4296" />
+    <img id="logo" alt="Dr. Plumber, 757-401-4296"
+        srcset="./images/logo-256.png 256w, ./images/logo-512.png 512w, ./images/logo-1024.png 1024w" />
     
     <div id="text">
       <section>
