Add alt text to gallery images

--- a/index.html
+++ b/index.html
@@ -66,76 +66,76 @@
             data-pswp-width="750" 
             data-pswp-height="1000" 
             target="_blank">
-          <img src="images/200/DrPlumber.jpg" alt="" />
+          <img src="images/200/DrPlumber.jpg" alt="Dr. Plumber on a roof" />
         </a>
         <a href="images/1000/DrPlumberVehicle.jpg" 
             data-pswp-width="1000" 
             data-pswp-height="750"
             data-cropped="true"
             target="_blank">
-          <img src="images/200/DrPlumberVehicle.jpg" alt="" />
+          <img src="images/200/DrPlumberVehicle.jpg" alt="Dr. Plumber's truck (which used to be an ambulance)" />
         </a>
         <a href="images/1000/DrPlumberWaterHeater.jpg" 
             data-pswp-width="750" 
             data-pswp-height="1000" 
             target="_blank">
-          <img src="images/200/DrPlumberWaterHeater.jpg" alt="" />
+          <img src="images/200/DrPlumberWaterHeater.jpg" alt="Dr. Plumber in front of a water heater" />
         </a>
         <a href="images/1000/GasLeakDetector.jpg" 
             data-pswp-width="750" 
             data-pswp-height="1000" 
             target="_blank">
-          <img src="images/200/GasLeakDetector.jpg" alt="" />
+          <img src="images/200/GasLeakDetector.jpg" alt="Gas leak detector" />
         </a>
         <a href="images/1000/SewerCamera.jpg" 
             data-pswp-width="1000" 
             data-pswp-height="750" 
             data-cropped="true"
             target="_blank">
-          <img src="images/200/SewerCamera.jpg" alt="" />
+          <img src="images/200/SewerCamera.jpg" alt="Sewer snake and camera" />
         </a>
         <a href="images/1000/SewerWork.jpg" 
             data-pswp-width="750" 
             data-pswp-height="1000" 
             target="_blank">
-          <img src="images/200/SewerWork.jpg" alt="" />
+          <img src="images/200/SewerWork.jpg" alt="Sewer work" />
         </a>
         <a href="images/1000/ShowerRetrofit.jpg" 
             data-pswp-width="750" 
             data-pswp-height="1000" 
             target="_blank">
-          <img src="images/200/ShowerRetrofit.jpg" alt="" />
+          <img src="images/200/ShowerRetrofit.jpg" alt="Shower retrofit for an antique tub" />
         </a>
         <a href="images/1000/SinkFaucet.jpg" 
             data-pswp-width="750" 
             data-pswp-height="1000" 
             target="_blank">
-          <img src="images/200/SinkFaucet.jpg" alt="" />
+          <img src="images/200/SinkFaucet.jpg" alt="Sink faucet" />
         </a>
         <a href="images/1000/TanklessWaterHeater1.jpg" 
             data-pswp-width="750" 
             data-pswp-height="1000" 
             target="_blank">
-          <img src="images/200/TanklessWaterHeater1.jpg" alt="" />
+          <img src="images/200/TanklessWaterHeater1.jpg" alt="Tankless water heater" />
         </a>
         <a href="images/1000/TanklessWaterHeater2.jpg" 
             data-pswp-width="1000" 
             data-pswp-height="750" 
             data-cropped="true"
             target="_blank">
-          <img src="images/200/TanklessWaterHeater2.jpg" alt="" />
+          <img src="images/200/TanklessWaterHeater2.jpg" alt="Another tankless water heater" />
         </a>
         <a href="images/1000/Toilet.jpg" 
             data-pswp-width="750" 
             data-pswp-height="1000" 
             target="_blank">
-          <img src="images/200/Toilet.jpg" alt="" />
+          <img src="images/200/Toilet.jpg" alt="Toilet" />
         </a>
         <a href="images/1000/TubInstall.jpg" 
             data-pswp-width="750" 
             data-pswp-height="1000" 
             target="_blank">
-          <img src="images/200/TubInstall.jpg" alt="" />
+          <img src="images/200/TubInstall.jpg" alt="Tub installation" />
         </a>
       </section>
     </main>
