Replace sewer camera photo with water heater photo

--- a/index.html
+++ b/index.html
@@ -87,12 +87,11 @@
             target="_blank">
           <img src="images/200/GasLeakDetector.jpg" alt="Gas leak detector" />
         </a>
-        <a href="images/1000/SewerCamera.jpg" 
-            data-pswp-width="1000" 
-            data-pswp-height="750" 
-            data-cropped="true"
+        <a href="images/1000/WaterHeater.jpg" 
+            data-pswp-width="750" 
+            data-pswp-height="1000" 
             target="_blank">
-          <img src="images/200/SewerCamera.jpg" alt="Sewer snake and camera" />
+          <img src="images/200/WaterHeater.jpg" alt="Water heater" />
         </a>
         <a href="images/1000/SewerWork.jpg" 
             data-pswp-width="750" 
