Add more info and SEO stuff

--- a/index.html
+++ b/index.html
@@ -6,8 +6,100 @@
 
     <title>Dr. Plumber</title>
 
+    <meta name="description" content="Fast, reliable, and professional water heater repair &amp; replacement and drain cleaning in Virginia Beach, Chesapeake, Suffolk, Norfolk, Hampton and Newport News. Same-day service, licensed techs, competitive pricing, clogged drain experts, emergency service available. Call 757-401-4296." />
+    <meta name="keywords" content="water heater repair, water heater replacement, Virginia Beach water heater, Chesapeake water heater, Norfolk water heater, tankless water heater, emergency water heater repair, drain cleaning Virginia Beach, clogged drain Chesapeake, Norfolk drain service, sewer cleaning Hampton, Suffolk drain unclog, Newport News plumber" />
+
     <link rel="stylesheet" href="css/index.css" />
     <link rel="stylesheet" href="css/photoswipe.css" />
+
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Plumber",
+      "name": "Dr. Plumber LLC",
+      "telephone": "757-401-4296",
+      "url": "https://drplumber.pro",
+      "areaServed": [
+        "Virginia Beach, VA",
+        "Chesapeake, VA",
+        "Suffolk, VA",
+        "Norfolk, VA",
+        "Hampton, VA",
+        "Newport News, VA"
+      ],
+      "serviceType": [
+        "Water Heater Repair",
+        "Water Heater Replacement",
+        "Tankless Water Heater Installation",
+        "Hot Water Troubleshooting",
+        "Emergency Water Heater Service",
+        "Drain Cleaning",
+        "Clog Removal",
+        "Sewer Line Cleaning",
+        "Hydro Jetting",
+        "Emergency Drain Service"
+      ],
+      "openingHours": "Mo-Su",
+      "priceRange": "$$"
+    }
+    </script>
+
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "FAQPage",
+      "mainEntity": [
+        {
+          "@type": "Question",
+          "name": "Do you offer emergency same-day water heater repair?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Yes — we offer emergency same-day water heater repair across Virginia Beach, Chesapeake, Suffolk, Norfolk, Hampton, and Newport News. Call PHONE_NUMBER for immediate dispatch."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "How do I know if my water heater needs repair or replacement?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Common signs include no hot water, inconsistent temperature, rust-colored water, leaks, frequent cycling, or a unit older than 10–12 years. Our techs diagnose and provide a clear repair vs replacement recommendation."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Do you install tankless water heaters?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Yes — we repair and install both traditional tank and tankless water heaters, including conversions and energy-efficient upgrades."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Do you provide emergency drain cleaning?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Yes — we offer emergency drain cleaning 7 days a week in Virginia Beach, Chesapeake, Suffolk, Norfolk, Hampton, and Newport News. Call PHONE_NUMBER for immediate help."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "What types of drains can you clean?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "We clean kitchen sinks, bathroom sinks, bathtubs, showers, toilets, floor drains, and main sewer lines using professional augers, snakes, and hydro jetting equipment."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "How do I know if my main sewer line is clogged?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Warning signs include multiple drains backing up at once, gurgling sounds in toilets, slow draining throughout the home, or sewage odors. Call us to diagnose with a sewer camera inspection."
+          }
+        }
+      ]
+    }
+    </script>
 
     <script type="module">
       import PhotoSwipeLightbox from './js/photoswipe-lightbox.esm.min.js';
@@ -136,6 +228,109 @@
             target="_blank">
           <img src="images/200/TubInstall.jpg" alt="Tub installation" />
         </a>
+      </section>
+
+      <section id="info1">
+        <h3>Complete Water Heater Service</h3>
+        <p>
+          We handle everything — from quick repairs to full replacements, tankless conversions, 
+          preventative maintenance, and emergency hot water restoration. Our certified technicians 
+          come prepared to diagnose and fix the problem the same day when possible.
+        </p>
+
+        <h4>We fix&hellip;</h4>
+        <ul>
+          <li>Hot water not working or insufficient hot water</li>
+          <li>Leaking tank or fittings</li>
+          <li>Noisy or rumbling heater (sediment buildup)</li>
+          <li>Faulty thermostats, heating elements, or thermocouples</li>
+          <li>Frequent on/off cycling or pilot light issues</li>
+          <li>Tankless water heater service &amp; installation</li>
+          <li>Water heater replacement &amp; safe disposal</li>
+        </ul>
+
+        <h4>When to repair vs. replace</h4>
+        <p>
+          <strong>Repair</strong> is usually best for single-component failures 
+          (heating element, thermostat, valve) on newer units.
+          <strong>Replace</strong> is recommended for tanks leaking, severe corrosion, 
+          repeated breakdowns, or units older than <em>10–12 years</em>.
+        </p>
+      </section>
+
+      <section id="info2">
+        <h3>Expert Drain Cleaning Services</h3>
+        <p>
+          From simple sink clogs to backed-up sewer lines, we have the equipment and expertise to clear
+          your drains quickly and safely. Our licensed plumbers use professional tools to restore flow 
+          and prevent future problems.
+        </p>
+
+        <h4>We clear&hellip;</h4>
+        <ul>
+          <li>Kitchen sink &amp; garbage disposal clogs</li>
+          <li>Bathroom sink, tub, and shower drains</li>
+          <li>Toilet blockages &amp; sewer backups</li>
+          <li>Floor drains &amp; laundry drains</li>
+          <li>Main sewer line obstructions</li>
+          <li>Tree root intrusion in sewer pipes</li>
+          <li>Grease buildup and recurring clogs</li>
+        </ul>
+
+        <h4>Advanced methods</h4>
+        <ul>
+          <li>Video camera inspections to locate blockages</li>
+          <li>Power snaking &amp; augers for tough clogs</li>
+          <li>High-pressure hydro jetting for deep cleaning</li>
+          <li>Preventive maintenance programs</li>
+        </ul>
+      </section>
+
+      <section id="faq1">
+        <h4>Frequently Asked Questions</h4>
+        <dl>
+          <dt>Do you offer emergency same-day water heater repair?</dt>
+          <dd>
+            Yes — call <a href="tel:+17574014296">757-401-4296</a>. We prioritize leaks and 
+            no-hot-water calls and will dispatch a technician quickly.
+          </dd>
+          <dt>How long does a water heater replacement take?</dt>
+          <dd>
+            Most replacements are completed in 3–6 hours depending on unit type, venting, 
+            and any necessary plumbing or gas work.
+          </dd>
+          <dt>Can I convert from a tank to a tankless system?</dt>
+          <dd>
+            Yes. Conversions may require gas line upgrades or electrical changes; we provide 
+            full estimates and code-compliant installations.
+          </dd>
+          <dt>Do you offer warranties?</dt>
+          <dd>
+            Yes — we provide manufacturer warranties on new units and a service warranty on labor. 
+            Warranty details are included in your written estimate.
+          </dd>
+        </dl>
+      </section>
+
+      <section id="faq2">
+        <h4>Frequently Asked Questions</h4>
+        <dl>
+          <dt>Do you provide emergency drain cleaning?</dt>
+          <dd>
+            Yes — call <a href="tel:+17574014296">757-401-4296</a>. We respond quickly to 
+            emergency clogs, sewer backups, and overflows.
+          </dd>
+          <dt>What if the problem keeps coming back?</dt>
+          <dd>
+            We offer video camera inspections to identify root causes like tree roots, collapsed pipes, 
+            or grease buildup so we can fix it permanently.
+          </dd>
+          <dt>Do you offer maintenance plans?</dt>
+          <dd>
+            Yes — we provide preventive drain cleaning and inspections to keep your drains running 
+            smoothly year-round.
+          </dd>
+        </dl>
       </section>
     </main>
   </body>
