Add polybutylene page

--- a/index.html
+++ b/index.html
@@ -122,9 +122,10 @@
         <h4>Offering professional home repair services:</h4>
         <ul>
           <li>Tankless water heater installation &amp; service</li>
-          <li>Drain cleaning</li>
+          <li><a href="#water-heater">Water heater replacement &amp; repair</a></li>
+          <li><a href="#drain-cleaning">Drain cleaning</a></li>
+          <li><a href="polybutylene.html#polybutylene">Polybutylene (Quest) pipe repair &amp; replacement</a></li>
           <li>Leak repair</li>
-          <li>Water heater replacement &amp; repair</li>
           <li>&hellip;and much more!</li>
         </ul>
 
@@ -231,7 +232,7 @@
       </section>
 
       <section id="info1">
-        <h3>Complete Water Heater Service</h3>
+        <h3 id="water-heater">Complete Water Heater Service</h3>
         <p>
           We handle everything — from quick repairs to full replacements, tankless conversions, 
           preventative maintenance, and emergency hot water restoration. Our certified technicians 
@@ -259,7 +260,7 @@
       </section>
 
       <section id="info2">
-        <h3>Expert Drain Cleaning Services</h3>
+        <h3 id="drain-cleaning">Expert Drain Cleaning Services</h3>
         <p>
           From simple sink clogs to backed-up sewer lines, we have the equipment and expertise to clear
           your drains quickly and safely. Our licensed plumbers use professional tools to restore flow 
