Change email and logo

--- a/polybutylene.html
+++ b/polybutylene.html
@@ -25,8 +25,7 @@
   <body>
     <main>
       <section id="logo">
-        <img srcset="images/logo-256.png 256w, images/logo-512.png 512w, images/logo-1024.png 1024w"
-            alt="Dr. Plumber, 757-401-4296" />
+        <img src="images/logo.png" alt="Dr. Plumber, 757-401-4296" />
       </section>
       
       <section id="text">
@@ -58,7 +57,7 @@
         <p>
           <a href="tel:+17574014296">Call</a>,
           <a href="sms:+17574014296">text</a>, or
-          <a href="mailto:Dr.plumber.james@gmail.com">email</a> 
+          <a href="mailto:service.drplumberllc@gmail.com">email</a> 
           us for an estimate today!
         </p>
 
