Add another two images to replace the removed ones

--- a/index.html
+++ b/index.html
@@ -216,6 +216,18 @@
             target="_blank">
           <img src="images/200/TubInstall.jpg" alt="Tub installation" />
         </a>
+        <a href="images/1000/ShowerRepair.jpg" 
+            data-pswp-width="750" 
+            data-pswp-height="1000" 
+            target="_blank">
+          <img src="images/200/ShowerRepair.jpg" alt="Shower repair" />
+        </a>
+        <a href="images/1000/SinkPiping.jpg" 
+            data-pswp-width="750" 
+            data-pswp-height="1000" 
+            target="_blank">
+          <img src="images/200/SinkPiping.jpg" alt="Sink piping" />
+        </a>
       </section>
 
       <section id="info1">
